--- a/data/countries/es.yml
+++ b/data/countries/es.yml
@@ -77,8 +77,12 @@
   - CM
 - - Canadá
   - CA
+- - República Centroafricana
+  - CF
 - - Chad
   - TD
+- - República Checa
+  - CZ
 - - Chile
   - CL
 - - China
@@ -91,6 +95,10 @@
   - CO
 - - Comoras
   - KM
+- - República del Congo
+  - CG
+- - Rep. Dem. del Congo
+  - CD
 - - Islas Cook
   - CK
 - - Corea del Norte
@@ -105,10 +113,12 @@
   - HR
 - - Cuba
   - CU
-- - Dinamarca
-  - DK
 - - Dominica
   - DM
+- - República Dominicana
+  - DO
+- - Ecuador
+  - EC
 - - Egipto
   - EG
 - - El Salvador
@@ -223,6 +233,8 @@
   - LT
 - - Luxemburgo
   - LU
+- - República de Macedonia
+  - MK
 - - Madagascar
   - MG
 - - Malasia
@@ -297,8 +309,6 @@
   - PW
 - - Autoridad Nacional Palestina
   - PS
-- - Países Bajos
-  - NL
 - - Panamá
   - PA
 - - Papúa Nueva Guinea
@@ -317,20 +327,6 @@
   - PT
 - - Puerto Rico
   - PR
-- - Reino Unido
-  - GB
-- - República Checa
-  - CZ
-- - República Centroafricana
-  - CF
-- - República del Congo
-  - CG
-- - Rep. Dem. del Congo
-  - CD
-- - República Dominicana
-  - DO
-- - República de Macedonia
-  - MK
 - - Reunión
   - RE
 - - Ruanda
